fix: overflow in cardfilms

--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -15,7 +15,6 @@
 .cardFilm {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 15.625rem;
   background-color: var(--color-1);
   transition: transform 0.3s ease-in-out;
@@ -30,6 +29,7 @@ article {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  flex-grow: 1;
   margin-bottom: 30px;
   border-radius: 10px;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.199);
@@ -45,6 +45,7 @@ article {
   border: 1px solid rgba(0, 0, 0, 0.63);
   border-top: none;
   border-radius: 0px 0px 10px 10px;
+  flex-grow: 1;
 }
 
 .poster {
